tests/NormalTests/paczka1/small_fuzzy/58586487.err
Error in line 5: 3vY3UTZcs S  9 309,8
Error in line 4: 3vY3UTZcs S779 80,9
